--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,14 @@
     tools:context=".MainActivity">
 
 
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/VP"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottom_navigation"
+        />
+
+
     <FrameLayout
         android:id="@+id/flContainer"
         android:layout_width="match_parent"
@@ -25,21 +33,7 @@
         android:layout_alignParentBottom="true"
         app:menu="@menu/menu_bottom_navigation" />
 
-    <androidx.drawerlayout.widget.DrawerLayout
-        android:id="@+id/drawerLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_navigation">
 
-        <com.google.android.material.navigation.NavigationView
-            android:id="@+id/side_navigation"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            app:menu="@menu/menu_side_navigation"
-            android:layout_gravity="start"
-            app:headerLayout="@layout/navigation_header"
-            />
-    </androidx.drawerlayout.widget.DrawerLayout>
 
 
 </RelativeLayout>
