Styled the login/sign up page

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_margin="10dp"
+    android:layout_margin="20dp"
     tools:context=".LoginActivity">
 
     <TextView
@@ -14,37 +14,55 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="50dp"
         android:text="Login"
         android:textStyle="bold"
         android:textColor="@color/black"
         android:textSize="30dp"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Email"
+        android:textColor="@color/black"
+        android:layout_marginTop="30dp"/>
+
 
     <EditText
         android:id="@+id/etUsername"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:padding="10dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:layout_marginTop="20dp"
-        android:hint="Enter username" />
+        android:background="@drawable/background_edit_text"
+        android:layout_marginTop="10dp"
+        android:hint="Enter username..." />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Password"
+        android:textColor="@color/black"
+        android:layout_marginTop="30dp"/>
 
 
     <EditText
         android:id="@+id/etPassword"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:padding="10dp"
+        android:background="@drawable/background_edit_text"
         android:layout_marginTop="10dp"
         android:ems="10"
-        android:hint="Enter Password"
+        android:hint="Enter Password..."
         android:inputType="textPassword" />
 
     <Button
         android:id="@+id/btnBotton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="40dp"
         android:text="Login" />
 
     <TextView
