--- a/app/src/main/res/drawable/background_edit_text.xml
+++ b/app/src/main/res/drawable/background_edit_text.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
 
-    <solid android:color="#4B8D97"/>
-    <corners android:bottomLeftRadius="500dp" android:bottomRightRadius="500dp"/>
+    <solid android:color="#fafafa"/>
+    <stroke android:color="@color/black" android:width="1dp"/>
+    <corners android:radius="4dp"/>
+
 
 
 </shape>
