--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -12,29 +12,64 @@
         android:layout_height="270dp"
         android:layout_marginStart="-100dp"
         android:layout_marginEnd="-100dp"
-        android:gravity="center"
         android:background="@drawable/radius">
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/ivprofilepic"
-            android:layout_width="130dp"
-            android:layout_height="130dp"
-            app:civ_border_color="@color/white"
-            app:civ_border_width="2dp"
-            android:src="@drawable/dpdefault"/>
+        <LinearLayout
+            android:layout_width="100dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="370dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/button"
+            android:id="@+id/LLlogout"
+            android:gravity="center"
+            android:elevation="200dp"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/tvProfileUsername"
+            <ImageView
+                android:id="@+id/imageView3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_logout" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:textColor="@color/black"
+                android:text="Logout" />
+
+
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Username"
-            android:textStyle="bold"
-            android:textColor="@color/white"
-            android:textSize="21sp"
-            android:layout_marginTop="15dp"
-            android:layout_marginLeft="15dp"
-            android:layout_below="@+id/ivprofilepic"/>
+            android:orientation="vertical"
+            android:layout_marginLeft="120dp"
+            android:layout_marginTop="30dp"
+            android:gravity="center">
 
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/ivprofilepic"
+                android:layout_width="130dp"
+                android:layout_height="130dp"
+                android:src="@drawable/dpdefault"
+                app:civ_border_color="@color/white"
+                app:civ_border_width="2dp" />
+
+            <TextView
+                android:id="@+id/tvProfileUsername"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/ivprofilepic"
+                android:text="Username"
+                android:textColor="@color/white"
+                android:textSize="21sp"
+                android:layout_marginTop="10dp"
+                android:textStyle="bold" />
+
+        </LinearLayout>
     </RelativeLayout>
 
     <RelativeLayout
@@ -70,6 +105,7 @@
 
         <LinearLayout
             android:id="@+id/LL1"
+            android:elevation="190dp"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_marginTop="20dp"
@@ -135,35 +171,11 @@
         android:padding="8dp"
         android:layout_height="match_parent"
         android:background="@drawable/background_edit_text"
-        android:layout_above="@+id/LLlogout"
+
         android:layout_below="@+id/tvHistory"
         />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
-        android:id="@+id/LLlogout"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="11dp"
-        android:gravity="center"
-        android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_logout" />
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:text="Logout" />
-
-
-    </LinearLayout>
 
 
 
