--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -162,18 +162,24 @@
         android:layout_marginLeft="10dp"
         android:textStyle="bold"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvHistory"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="3dp"
-        android:padding="8dp"
         android:layout_height="match_parent"
-        android:background="@drawable/background_edit_text"
+        android:layout_below="@+id/tvHistory">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rvHistory"
+            android:layout_width="match_parent"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="3dp"
+            android:padding="8dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/background_edit_text"
 
-        android:layout_below="@+id/tvHistory"
-        />
+            />
+    </LinearLayout>
+
+
 
 
 
