--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     tools:context=".fragment.ProfileFragment">
 
     <RelativeLayout
@@ -22,7 +23,7 @@
             android:background="@drawable/button"
             android:id="@+id/LLlogout"
             android:gravity="center"
-            android:elevation="200dp"
+
             android:orientation="horizontal">
 
             <ImageView
@@ -80,77 +81,91 @@
         android:gravity="center">
 
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:id="@+id/LL2"
-            android:layout_width="90dp"
-            android:layout_height="90dp"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:layout_marginRight="18dp"
             android:layout_toStartOf="@+id/LL1"
-            android:background="@drawable/circle"
-            android:orientation="vertical"
+            app:cardCornerRadius="90dp"
             android:gravity="center">
+
             <TextView
                 android:id="@+id/tv2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="60"
+                android:layout_gravity="center"
+                android:layout_marginTop="-10dp"
                 android:textStyle="bold"
-                android:textColor="@color/white" />
+                android:textColor="@color/black" />
             <TextView
+                android:id="@+id/tvName2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:text="Squats"
+                android:layout_gravity="center"
                 android:textStyle="bold"
-                android:textColor="@color/white" />
-        </LinearLayout>
+                android:textColor="@color/black" />
+        </androidx.cardview.widget.CardView>
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:id="@+id/LL1"
-            android:elevation="190dp"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+
+            android:layout_width="110dp"
+            android:layout_height="110dp"
             android:layout_marginTop="20dp"
+            app:cardCornerRadius="90dp"
             android:background="@drawable/circle"
-            android:gravity="center"
-            android:orientation="vertical">
+            android:gravity="center">
             <TextView
                 android:id="@+id/tv1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="100"
+                android:layout_gravity="center"
+                android:layout_marginTop="-10dp"
                 android:textStyle="bold"
-                android:textColor="@color/white" />
+                android:textColor="@color/black" />
             <TextView
+                android:id="@+id/tvName1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Sit Ups"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
                 android:textStyle="bold"
-                android:textColor="@color/white" />
-        </LinearLayout>
+                android:textColor="@color/black" />
+        </androidx.cardview.widget.CardView>
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:id="@+id/LL3"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="90dp"
+            android:layout_height="90dp"
             android:layout_toEndOf="@+id/LL1"
             android:layout_marginLeft="18dp"
-            android:background="@drawable/circle"
-            android:orientation="vertical"
+            app:cardCornerRadius="90dp"
             android:gravity="center">
             <TextView
                 android:id="@+id/tv3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="40"
+                android:layout_gravity="center"
+                android:layout_marginTop="-10dp"
                 android:textStyle="bold"
-                android:textColor="@color/white" />
+                android:textColor="@color/black" />
             <TextView
+                android:id="@+id/tvName3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
                 android:text="Push Ups"
                 android:textStyle="bold"
-                android:textColor="@color/white" />
-        </LinearLayout>
+                android:textColor="@color/black" />
+        </androidx.cardview.widget.CardView>
 
     </RelativeLayout>
 
