Cleaned up code by removing empty lines
Took out all unnecessary empty lines of code and comments so that there can be consistency in style of code

--- a/app/src/main/res/layout/fragment_situps.xml
+++ b/app/src/main/res/layout/fragment_situps.xml
@@ -4,10 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.SitupsFragment"
-    >
-
-    <!-- TODO: Update blank fragment layout -->
+    tools:context=".fragment.SitupsFragment">
 
     <TextView
         android:id="@+id/situpCount"
@@ -25,7 +22,6 @@
         android:id="@+id/situpButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_marginTop="64dp"
         android:text="Press"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,6 +37,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/situpButton" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
