--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -23,7 +23,6 @@
             android:background="@drawable/button"
             android:id="@+id/LLlogout"
             android:gravity="center"
-
             android:orientation="horizontal">
 
             <ImageView
@@ -39,8 +38,6 @@
                 android:layout_marginStart="5dp"
                 android:textColor="@color/black"
                 android:text="Logout" />
-
-
         </LinearLayout>
 
         <LinearLayout
@@ -57,7 +54,7 @@
                 android:layout_height="130dp"
                 android:src="@drawable/dpdefault"
                 app:civ_border_color="@color/white"
-                app:civ_border_width="2dp" />
+                app:civ_border_width="0dp" />
 
             <TextView
                 android:id="@+id/tvProfileUsername"
@@ -69,7 +66,6 @@
                 android:textSize="21sp"
                 android:layout_marginTop="10dp"
                 android:textStyle="bold" />
-
         </LinearLayout>
     </RelativeLayout>
 
@@ -79,7 +75,6 @@
         android:layout_height="140dp"
         android:layout_below="@+id/Rl2"
         android:gravity="center">
-
 
         <androidx.cardview.widget.CardView
             android:id="@+id/LL2"
@@ -99,6 +94,7 @@
                 android:layout_marginTop="-10dp"
                 android:textStyle="bold"
                 android:textColor="@color/black" />
+
             <TextView
                 android:id="@+id/tvName2"
                 android:layout_width="wrap_content"
@@ -112,13 +108,13 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/LL1"
-
             android:layout_width="110dp"
             android:layout_height="110dp"
             android:layout_marginTop="20dp"
             app:cardCornerRadius="90dp"
             android:background="@drawable/circle"
             android:gravity="center">
+
             <TextView
                 android:id="@+id/tv1"
                 android:layout_width="wrap_content"
@@ -128,6 +124,7 @@
                 android:layout_marginTop="-10dp"
                 android:textStyle="bold"
                 android:textColor="@color/black" />
+
             <TextView
                 android:id="@+id/tvName1"
                 android:layout_width="wrap_content"
@@ -147,6 +144,7 @@
             android:layout_marginLeft="18dp"
             app:cardCornerRadius="90dp"
             android:gravity="center">
+
             <TextView
                 android:id="@+id/tv3"
                 android:layout_width="wrap_content"
@@ -156,6 +154,7 @@
                 android:layout_marginTop="-10dp"
                 android:textStyle="bold"
                 android:textColor="@color/black" />
+
             <TextView
                 android:id="@+id/tvName3"
                 android:layout_width="wrap_content"
@@ -166,7 +165,6 @@
                 android:textStyle="bold"
                 android:textColor="@color/black" />
         </androidx.cardview.widget.CardView>
-
     </RelativeLayout>
 
     <TextView
@@ -184,6 +182,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/tvHistory">
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvHistory"
             android:layout_width="match_parent"
@@ -192,9 +191,7 @@
             android:layout_marginBottom="3dp"
             android:padding="8dp"
             android:layout_height="match_parent"
-            android:background="@drawable/background_edit_text"
-
-            />
+            android:background="@drawable/background_edit_text" />
     </LinearLayout>
 
 
