--- a/app/src/main/res/layout/fragment_pushups.xml
+++ b/app/src/main/res/layout/fragment_pushups.xml
@@ -4,10 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.PushupsFragment"
-   >
-
-    <!-- TODO: Update blank fragment layout -->
+    tools:context=".fragment.PushupsFragment">
 
     <TextView
         android:id="@+id/pushupCount"
@@ -25,7 +22,6 @@
         android:id="@+id/pushupButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_marginTop="64dp"
         android:text="Press"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,6 +37,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pushupButton" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
