--- a/app/src/main/res/layout/item_exercise.xml
+++ b/app/src/main/res/layout/item_exercise.xml
@@ -10,37 +10,43 @@
         android:id="@+id/card_view"
         android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="370dp"
+        android:layout_height="wrap_content"
         android:layout_margin="5dp"
         card_view:cardCornerRadius="10dp">
 
-        <ImageView
-            android:id="@+id/ivImageExercise"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:adjustViewBounds="true"
-            android:scaleType="fitStart"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tvTitleExercise"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="240dp"
-            android:text="YES"
-            android:padding="5dp"
-            android:textColor="@color/black"
-            android:textSize="30sp"
-            android:textStyle="bold"/>
+            <ImageView
+                android:id="@+id/ivImageExercise"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:adjustViewBounds="true"
+                android:scaleType="fitStart"
+                tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
-        <TextView
-            android:id="@+id/tvDescriptionExercise"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="280dp"
-            android:textColor="@color/black"
-            android:padding="5dp"
-            android:text="Description"/>
+            <TextView
+                android:id="@+id/tvTitleExercise"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="YES"
+                android:padding="5dp"
+                android:layout_marginTop="-40dp"
+                android:textColor="@color/black"
+                android:layout_below="@+id/ivImageExercise"
+                android:textSize="30sp"
+                android:textStyle="bold"/>
+            <TextView
+                android:id="@+id/tvDescriptionExercise"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="-10dp"
+                android:layout_below="@+id/tvTitleExercise"
+                android:textColor="@color/black"
+                android:padding="5dp"
+                android:text="Description"/>
+        </RelativeLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
 
