--- a/app/src/main/res/layout/fragment_squat_counter.xml
+++ b/app/src/main/res/layout/fragment_squat_counter.xml
@@ -78,7 +78,7 @@
         android:id="@+id/squatsCounterCancelBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#ff0000"
+        app:cardBackgroundColor="@color/red"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
         android:layout_marginLeft="30dp"
