Changed search others to search friends

--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -23,7 +23,7 @@
             android:inputType="textPersonName"
             android:background="@drawable/search_background"
             android:layout_marginTop="10dp"
-            android:hint="Search others..." />
+            android:hint="Search friends..." />
 
         <ImageView
             android:id="@+id/ivSearchButton"
